--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
-import org.apache.tools.ant.taskdefs.condition.Os;
+//file:noinspection ConfigurationAvoidance
+import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
 	repositories {
 		gradlePluginPortal()
-		maven { url = 'https://maven.minecraftforge.net' }
 		maven { url = "https://repo.spongepowered.org/repository/maven-public/" }
+		maven { url = 'https://maven.minecraftforge.net' }
 	}
 	dependencies {
 		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '2.3-SNAPSHOT', changing: true
@@ -23,7 +24,7 @@ subprojects {
 	
 	archivesBaseName = 'dj2addons'
 	group = 'btpos.dj2addons'
-	version = '1.2.2'
+	version = '1.3.0'
 	
 	sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 	compileJava {
@@ -41,6 +42,7 @@ subprojects {
 		
 		mappings = "stable_39"
 		
+		//noinspection GroovyAssignabilityCheck
 		replace "@VERSION@", project.version
 //		replaceIn "DJ2Addons.java"
 	}
