--- a/coremod/build.gradle
+++ b/coremod/build.gradle
@@ -1,9 +1,9 @@
 jar {
 	manifest {
 		attributes (
-				"FMLCorePlugin": 'btpos.dj2addons.DJ2ALoadingPlugin',
+				"FMLCorePlugin": 'btpos.dj2addonscore.DJ2ALoadingPlugin',
 				
-				"TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
+				"TweakClass": 'org.spongepowered.asm.launch.MixinTweaker',
 				"MixinConfigs": 'mixins.dj2addons.bootstrap.json'
 		)
 		archiveName 'dj2addons-core.jar'
