--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 plugins {
 	id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
 }
+
 project.ext.pythonFile = Os.isFamily(Os.FAMILY_WINDOWS) ? project.file('venv/Scripts/python.exe') : project.file('venv/bin/python3')
 subprojects {
 	apply plugin: 'net.minecraftforge.gradle.forge'
@@ -55,11 +56,16 @@ subprojects {
 		maven { url 'https://jitpack.io' }
 	}
 	
+	configurations {
+		shadow
+	}
+	
 	dependencies {
 		implementation("com.github.LlamaLad7:MixinExtras:0.1.1")
+		shadow("com.github.LlamaLad7:MixinExtras:0.1.1")
 //		annotationProcessor("com.github.LlamaLad7:MixinExtras:0.1.1")
-		implementation 'org.spongepowered:mixin:0.8.5'
-		testImplementation     "org.junit.jupiter:junit-jupiter-api:5.2.0"
+		implementation("org.spongepowered:mixin:0.8.5")
+		testImplementation("org.junit.jupiter:junit-jupiter-api:5.2.0")
 		testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
 		testCompile("org.junit.platform:junit-platform-launcher:1.1.0")
 		testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
