--- a/mod/build.gradle
+++ b/mod/build.gradle
@@ -23,6 +23,8 @@ repositories {
 	mavenCentral()
 }
 
+
+
 dependencies {
 	compile project(":coremod")
 	
@@ -31,15 +33,15 @@ dependencies {
 	implementation("mezz.jei:jei_1.12.2:4.16.1.302")
 	
 	deobfCompile("curse.maven:ActuallyAdditions-228404:3117927")
-//	deobfProvided("curse.maven:DraconicEvolution-223565:3431261")
-//	deobfProvided(
-//			"curse.maven:EnderIO-64578:3328811",
-//			"curse.maven:ProjectIntelligence-306028:2833640",
-//			"curse.maven:EnderCore-231868:2972849",
-//			"curse.maven:BrandonsCore-231382:3408276",
-//			"curse.maven:CodeChickenLib-242818:2779848"
-//	)
-//	compile "cofh:RedstoneFlux:1.12-2.0.0.1:universal"
+	deobfProvided("curse.maven:DraconicEvolution-223565:3431261")
+	deobfProvided(
+			"curse.maven:EnderIO-64578:3328811",
+			"curse.maven:ProjectIntelligence-306028:2833640",
+			"curse.maven:EnderCore-231868:2972849",
+			"curse.maven:BrandonsCore-231382:3408276",
+			"curse.maven:CodeChickenLib-242818:2779848"
+	)
+	compile "cofh:RedstoneFlux:1.12-2.0.0.1:universal"
 	
 	deobfProvided("curse.maven:Erebus-220698:3211974")
 	
@@ -106,6 +108,10 @@ dependencies {
 //			"curse.maven:MysticalAgriculture-246640:2704562"
 //	)
 	
+	provided(
+			"curse.maven:MysticalAgriculture-246640:2704562"
+	)
+	
 	deobfProvided(
 			"curse.maven:MoreTweaker-336569:3226142",
 			"curse.maven:MTLib-253211:3308160"
@@ -117,10 +123,6 @@ dependencies {
 	deobfProvided(
 			"curse.maven:ModularMachinery-270790:2713714",
 			"curse.maven:ModularMagic-324318:2737623"
-	)
-	
-	provided(
-			"curse.maven:MysticalAgriculture-246640:2704562"
 	)
 	
 	deobfProvided("curse.maven:Thaumcraft-223628:2629023")
@@ -146,6 +148,8 @@ dependencies {
 			"curse.maven:Mekanism-268560:2835175"
 	)
 	
+	deobfCompile("curse.maven:RadixCore-77286:2483855")
+	
 	// Dev Tools
 	testImplementation( // For ZenDoc
 			"org.reflections:reflections:0.10.2"
@@ -163,7 +167,7 @@ jar {
 
 build {
 	doLast {
-		project.tasks.injectCoremodJar.execute()
+		project.tasks.injectCoremodJar.execute() // TODO: make this portable instead of completely hardcoded
 	}
 }
 
