--- a/mod/build.gradle
+++ b/mod/build.gradle
@@ -32,13 +32,13 @@ dependencies {
 	
 	deobfCompile("curse.maven:ActuallyAdditions-228404:3117927")
 //	deobfProvided("curse.maven:DraconicEvolution-223565:3431261")
-//	deobfProvided(
-//			"curse.maven:EnderIO-64578:3328811",
-//			"curse.maven:ProjectIntelligence-306028:2833640",
-//			"curse.maven:EnderCore-231868:2972849",
-//			"curse.maven:BrandonsCore-231382:3408276",
-//			"curse.maven:CodeChickenLib-242818:2779848"
-//	)
+	deobfProvided(
+			"curse.maven:EnderIO-64578:3328811",
+			//"curse.maven:ProjectIntelligence-306028:2833640",
+			"curse.maven:EnderCore-231868:2972849",
+			//"curse.maven:BrandonsCore-231382:3408276",
+			"curse.maven:CodeChickenLib-242818:2779848"
+	)
 //	compile "cofh:RedstoneFlux:1.12-2.0.0.1:universal"
 	
 	deobfProvided("curse.maven:Erebus-220698:3211974")
