--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,8 @@ subprojects {
 	}
 	
 	dependencies {
-		implementation("com.github.LlamaLad7:MixinExtras:0.1.1")
-		shadow("com.github.LlamaLad7:MixinExtras:0.1.1")
+		implementation("io.github.llamalad7:mixinextras-common:0.3.5")
+		shadow("io.github.llamalad7:mixinextras-common:0.3.5")
 //		annotationProcessor("com.github.LlamaLad7:MixinExtras:0.1.1")
 		implementation("org.spongepowered:mixin:0.8.5")
 		testImplementation("org.junit.jupiter:junit-jupiter-api:5.2.0")
