--- a/mod/build.gradle
+++ b/mod/build.gradle
@@ -166,7 +166,7 @@ jar {
 	manifest {
 		attributes (
 				"TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
-				"MixinConfigs": 'mixins.dj2addons.init.json',
+//				"MixinConfigs": 'mixins.dj2addons.init.json',
 				'ContainedDeps': 'dj2addons-core.jar'
 		)
 	}
